--- a/android/src/main/res/layout/toast_custom.xml
+++ b/android/src/main/res/layout/toast_custom.xml
@@ -11,5 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#FFF"
+        android:singleLine="false"
         />
 </LinearLayout>
