Optimized the custom layout of Android Toast, using GradientDrawable to set the style.

--- a/android/src/main/res/layout/toast_custom.xml
+++ b/android/src/main/res/layout/toast_custom.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/custom_toast_container"
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="8dp"
-    android:background="#DAAA"
-    >
-    <TextView android:id="@+id/text"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:layout_marginStart="50dp"
+    android:layout_marginEnd="50dp">
+
+    <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#FFF"
-        android:singleLine="false"
-        />
-</LinearLayout>
+        android:background="#CC000000"
+        android:paddingStart="16dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="10dp"
+        android:textColor="#FFFFFF"
+        tools:text="Toast should be short." />
+</FrameLayout>
